# PYBD

./: flake.nix  flake.save  projet.tgz  pyproject.toml
dashboard/euronext/: Euronext_Equities_2020-05-01.csv  Euronext_Equities_2020-05-04.csv  Euronext_Equities_2020-05-05.csv  Euronext_Equities_2020-05-06.csv  Euronext_Equities_2020-05-07.csv  Euronext_Equities_2020-05-11.csv  Euronext_Equities_2020-05-12.csv  Euronext_Equities_2020-05-13.csv  Euronext_Equities_2020-05-14.csv  Euronext_Equities_2020-05-15.csv  Euronext_Equities_2020-05-18.csv  Euronext_Equities_2020-05-19.csv  Euronext_Equities_2020-05-20.csv  Euronext_Equities_2020-05-21.csv  Euronext_Equities_2020-05-25.csv  Euronext_Equities_2020-05-26.csv  Euronext_Equities_2020-05-27.csv  Euronext_Equities_2020-05-28.csv  Euronext_Equities_2020-05-29.csv  Euronext_Equities_2020-06-01.csv  Euronext_Equities_2020-06-02.csv  Euronext_Equities_2020-06-03.csv  Euronext_Equities_2020-06-05.csv  Euronext_Equities_2020-06-08.csv  Euronext_Equities_2020-06-09.csv  Euronext_Equities_2020-06-10.csv  Euronext_Equities_2020-06-11.csv  Euronext_Equities_2020-06-12.csv  Euronext_Equities_2020-06-17.csv  Euronext_Equities_2020-06-18.csv  Euronext_Equities_2020-06-19.csv  Euronext_Equities_2020-06-22.csv  Euronext_Equities_2020-06-23.csv  Euronext_Equities_2020-06-24.csv  Euronext_Equities_2020-06-25.csv  Euronext_Equities_2020-06-26.csv  Euronext_Equities_2020-06-29.csv  Euronext_Equities_2020-06-30.csv  Euronext_Equities_2020-07-01.csv  Euronext_Equities_2020-07-02.csv  (+735 more)
dashboard/tabs/: tab2.py
docker/etl/: apps.tgz
(+1 files in other folders)
