[project]
name = "pydb"
version = "0.1.0"
description = ""
authors = [
    {name = "max.nagaishi",email = "max.nagaishi@epita.fr"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
